made some visual changes

--- a/conf/locale_en-US.ini
+++ b/conf/locale_en-US.ini
@@ -3,3 +3,11 @@ countries = Countries
 cities = Cities
 contact us = Contact us
 page title = Traveler's Dictionary
+latest = Latest Posts
+editor's pick = Editor's Pick
+most popular = Most Popular
+other posts = Other Posts
+categories = Categories
+category = Category
+category %d = Category %d
+languages = Luqadaha
