--- a/conf/locale_so-SO.ini
+++ b/conf/locale_so-SO.ini
@@ -3,3 +3,11 @@ countries = Wadamada
 cities = Magaalooyinka
 contact us = Nala Xiriir
 page title = Qaamuuska Socdaalka
+latest = Warbixinno Cusub
+editor's pick = Xulka Qoraaga
+most popular = Xulka Akhristayaasha
+other posts = Warbixinno Kale
+categories = Qeybaha
+category = Qeyb
+category %d = Qeybta %daad
+languages = Languages
