all admin forms were implemented

--- a/conf/locale_en-US.ini
+++ b/conf/locale_en-US.ini
@@ -11,3 +11,15 @@ categories = Categories
 category = Category
 category %d = Category %d
 languages = Luqadaha
+login required notice = Please login using the form on the top right of this page
+new user = New user
+new post = New post
+new category = New category
+admin forms = Admin forms
+save as draft = Save as draft
+no items = No items
+save = Save
+clear = Clear
+admin = Admin
+admin home = Admin Home
+welcome = Welcome
