--- a/conf/locale_so-SO.ini
+++ b/conf/locale_so-SO.ini
@@ -11,3 +11,15 @@ categories = Qeybaha
 category = Qeyb
 category %d = Qeybta %daad
 languages = Languages
+login required notice = Fadlan gal adigoo adeegsanayo foomka gelitaanka ee yaal dhinca midig ee kore ee boggan
+new user = Qof cusub
+new post = Warbixin cusub
+new category = Qeyb cusub
+admin forms = Foomamka Maamulaha
+save as draft = Qabyo ahaan u xarey
+no items = Waxba kuma jiraan
+save = Xarey
+clear = Nadiifi
+admin = Maamule
+admin home = Hoyga Maamulaha
+welcome = Soo Dhawoow
