admin forms such as category, image-upload, post and user are all working well

--- a/conf/app.conf
+++ b/conf/app.conf
@@ -7,6 +7,7 @@ XSRFKey = affa65g465d4gd56g5h45xx5aa5dewtw5tkk2k8h
 XSRFExpire = 3600
 SessionProvider = "redis"
 sessionproviderconfig = "127.0.0.1:6379"
+uploads = /home/mahdi/src/src/github.com/boolow5/QaamuuskaSocdaalka/static/uploads/
 
 [lang]
 types=en-US|so-SO
