made some visual modifications

--- a/conf/locale_en-US.ini
+++ b/conf/locale_en-US.ini
@@ -2,7 +2,7 @@ home = Home
 countries = Countries
 cities = Cities
 contact us = Contact us
-page title = Traveler's Dictionary
+page title = Qaamuuska for Travelers
 latest = Latest Posts
 editor's pick = Editor's Pick
 most popular = Most Popular
