translated some words

--- a/conf/locale_en-US.ini
+++ b/conf/locale_en-US.ini
@@ -23,3 +23,8 @@ clear = Clear
 admin = Admin
 admin home = Admin Home
 welcome = Welcome
+views = Views
+date written = Written on
+people = People
+passports = Passports
+borders = Borders
