--- a/conf/locale_so-SO.ini
+++ b/conf/locale_so-SO.ini
@@ -23,3 +23,8 @@ clear = Nadiifi
 admin = Maamule
 admin home = Hoyga Maamulaha
 welcome = Soo Dhawoow
+views = Waxaa aqristay
+date written = Waxaa la qoray
+people = Dadka
+passports = Baasaboorada
+borders = Xuduudaha
